[gd_scene load_steps=8 format=2]

[ext_resource path="res://test/ui/UI.gd" type="Script" id=1]
[ext_resource path="res://test/ui/UILabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://test/ui/UIBlockPreview.tscn" type="PackedScene" id=3]
[ext_resource path="res://test/ui/UITimeLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://test/ui/UICostLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/font_title.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "warning"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer2/Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 326.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 316.0

[node name="UICostLabel" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 180.0

[node name="Time" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 68.0
margin_right = 180.0
margin_bottom = 132.0

[node name="UIBlockPreview" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 180.0
margin_bottom = 316.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 814.0
margin_bottom = 316.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_left = 152.0
margin_right = 472.0
margin_bottom = 34.0
size_flags_horizontal = 6
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "\"TAB\" to preview objective"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 38.0
margin_right = 624.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.94902, 0, 0, 1 )
text = "TIME WARNING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percentage" parent="MarginContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 824.0
margin_right = 1004.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/warning = SubResource( 1 )
